[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmcp-tools-github"
version = "0.1.0"
description = "GitHub tools for fastmcp-server"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.entry-points."fastmcp_tools"]
github = "tools.github"

[tool.setuptools.packages.find]
where = ["../.."]
include = ["tools.github*"]

[tool.setuptools.package-data]
"tools.github" = ["*.py"]
