[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmcp-tools-github"
version = "0.2.0"
description = "GitHub tools for fastmcp-server"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.entry-points."fastmcp_tools"]
github = "fastmcp_tools_github"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fastmcp_tools_github*"]


[tool.setuptools.package-data]
"fastmcp_tools_github" = ["*.py"]