[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmcp-tools-http"
version = "0.1.0"
description = "HTTP tools for fastmcp-server"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.entry-points."fastmcp_tools"]
http = "tools.http"

[tool.setuptools.packages.find]
where = ["../.."]
include = ["tools.http*"]

[tool.setuptools.package-data]
"tools.http" = ["*.py"]
