[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmcp-tools-http"
version = "0.2.0"
description = "HTTP tools for fastmcp-server"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.entry-points."fastmcp_tools"]
http = "fastmcp_tools_http"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fastmcp_tools_http*"]


[tool.setuptools.package-data]
"fastmcp_tools_http" = ["*.py"]