[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmcp-tools-kubernetes"
version = "0.2.0"
description = "Kubernetes tools for fastmcp-server"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["kubernetes>=28.0"]

[project.entry-points."fastmcp_tools"]
kubernetes = "fastmcp_tools_kubernetes"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fastmcp_tools_kubernetes*"]

[tool.setuptools.package-data]
"fastmcp_tools_kubernetes" = ["*.py"]