[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmcp-tools-notifications"
version = "0.2.0"
description = "Notification tools for fastmcp-server"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.entry-points."fastmcp_tools"]
notifications = "fastmcp_tools_notifications"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fastmcp_tools_notifications*"]


[tool.setuptools.package-data]
"fastmcp_tools_notifications" = ["*.py"]